--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,29 +25,29 @@
     <img class="logo" src="https://cdn.onlinewebfonts.com/svg/img_81173.svg" alt="Dashboard icon">
     <h1>DashBoardSG</h1>
   </div>
-  <div class="formBlock custom-control custom-checkbox">
+  <div class="formBlock">
     <h2>What's important to you?</h2>
       
     <form id="myForm" action="/display" method="post">
-      <div class="container custom-control custom-checkbox">
-        <label class="col custom-control-label" for="dash1">
+      <div class="custom-control custom-checkbox">
+        <label class="custom-control-label" for="dash1">
           <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected" checked> PM2.5
         </label>
 
-        <label class="col custom-control-label" for="dash2">
+        <label class="custom-control-label" for="dash2">
           <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected" checked> PSI
         </label>
 
-        <label class="col custom-control-label" for="dash3">
+        <label class="custom-control-label" for="dash3">
           <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected" checked> UVI
         </label>
 
-        <label class="col custom-control-label" for="dash4">
+        <label class="custom-control-label" for="dash4">
           <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected" checked> Weather
         </label>
       </div>
       <br>
-      <button class="btn btn-primary btn-lg" type="submit">Display</button>
+      <button class="btn btn-primary btn-lg" type="submit"><strong>Display</strong></button>
       <input type="hidden" id="userLatitude" name="userLatitude" value="latitude">
       <input type="hidden" id="userLongitude" name="userLongitude" value="longitude">
     </form>
