--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,19 +31,23 @@
     <form id="myForm" action="/display" method="post">
       <div class="custom-control custom-checkbox">
         <label class="custom-control-label" for="dash1">
-          <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected" checked> PM2.5
+          <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected" checked>PM2.5
         </label>
 
         <label class="custom-control-label" for="dash2">
-          <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected" checked> PSI
+          <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected" checked>PSI
         </label>
 
         <label class="custom-control-label" for="dash3">
-          <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected" checked> UVI
+          <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected" checked>UVI
         </label>
 
         <label class="custom-control-label" for="dash4">
-          <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected" checked> Weather
+          <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected" checked>Weather
+        </label>
+
+        <label class="custom-control-label" for="dash5">
+          <input type="checkbox" class="custom-control-input" id="dash5" name="Temp" value="selected" checked>Temperature
         </label>
       </div>
       <br>
