--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,10 +6,10 @@
     <h1>DashBoardSG</h1>
   </div>
     <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
-  <div class="about">
-    <h2>
-      DashBoardSG is a minimum viable product.
-    </h2>
+  <div class="aboutBlock">
+    <h3>
+      DashBoardSG uses your GPS to give you a personal dashboard.
+    </h3>
     <h3>New features to be built in the future include:</h3>
     <ul>
       <li>Cookies to allow persistence</li>
