--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,25 +30,26 @@
       
     <form id="myForm" action="/display" method="post">
       <div class="custom-control custom-checkbox">
-        <label class="custom-control-label" for="dash1">
-          <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected" checked>PM2.5
-        </label>
-
-        <label class="custom-control-label" for="dash2">
-          <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected" checked>PSI
-        </label>
-
-        <label class="custom-control-label" for="dash3">
-          <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected" checked>UVI
-        </label>
-
         <label class="custom-control-label" for="dash4">
-          <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected" checked>Weather
+          <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected">Weather
         </label>
 
         <label class="custom-control-label" for="dash5">
-          <input type="checkbox" class="custom-control-input" id="dash5" name="Temp" value="selected" checked>Temperature
+          <input type="checkbox" class="custom-control-input" id="dash5" name="Temp" value="selected">Temperature
         </label>
+
+        <label class="custom-control-label" for="dash1">
+          <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected">PM2.5
+        </label>
+
+        <label class="custom-control-label" for="dash2">
+          <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected">PSI
+        </label>
+
+        <label class="custom-control-label" for="dash3">
+          <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected">UVI
+        </label>
+
       </div>
       <br>
       <button class="btn btn-primary btn-lg" type="submit"><strong>Display</strong></button>
