--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,24 +30,32 @@
       
     <form id="myForm" action="/display" method="post">
       <div class="custom-control custom-checkbox">
-        <label class="custom-control-label" for="dash4">
-          <input type="checkbox" class="custom-control-input" id="dash4" name="Weather" value="selected">Weather
-        </label>
-
-        <label class="custom-control-label" for="dash5">
-          <input type="checkbox" class="custom-control-input" id="dash5" name="Temp" value="selected">Temperature
-        </label>
-
         <label class="custom-control-label" for="dash1">
-          <input type="checkbox" class="custom-control-input" id="dash1" name="PM25" value= "selected">PM2.5
+          <input type="checkbox" class="custom-control-input" id="dash1" name="Weather" value="selected" checked>Weather
         </label>
 
         <label class="custom-control-label" for="dash2">
-          <input type="checkbox" class="custom-control-input" id="dash2" name="PSI" value="selected">PSI
+          <input type="checkbox" class="custom-control-input" id="dash2" name="Temp" value="selected" checked>Temperature
         </label>
 
         <label class="custom-control-label" for="dash3">
-          <input type="checkbox" class="custom-control-input" id="dash3" name="UVI" value="selected">UVI
+          <input type="checkbox" class="custom-control-input" id="dash3" name="Humidity" value="selected" checked>Humidity
+        </label>
+
+        <label class="custom-control-label" for="dash3">
+          <input type="checkbox" class="custom-control-input" id="dash3" name="Rainfall" value="selected">Rainfall
+        </label>
+
+        <label class="custom-control-label" for="dash4">
+          <input type="checkbox" class="custom-control-input" id="dash4" name="PM25" value= "selected">PM2.5
+        </label>
+
+        <label class="custom-control-label" for="dash5">
+          <input type="checkbox" class="custom-control-input" id="dash5" name="PSI" value="selected">PSI
+        </label>
+
+        <label class="custom-control-label" for="dash6">
+          <input type="checkbox" class="custom-control-input" id="dash6" name="UVI" value="selected">UVI
         </label>
 
       </div>
