--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,7 +12,9 @@
     </h3>
     <h3>New features to be built in the future include:</h3>
     <ul>
+      <li>Adding a spinning wheel upon click</li>
       <li>Cookies to allow persistence</li>
+      <li>Contact Us page should write the feedback into the database</li>
       <li>Addition of new dashboard items (Suggestions are welcome)</li>
       <li>Troubleshoot the hamburger on navbar</li>
     </ul>
