--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,8 @@
           <input type="checkbox" class="custom-control-input" id="rainfallId" name="Rainfall" value="selected">Rainfall
         </label>
 
-        <label class="custom-control-label" for="Pm25Id">
-          <input type="checkbox" class="custom-control-input" id="Pm25Id" name="PM25" value= "selected">PM2.5
+        <label class="custom-control-label" for="pm25Id">
+          <input type="checkbox" class="custom-control-input" id="pm25Id" name="PM25" value= "selected">PM2.5
         </label>
 
         <label class="custom-control-label" for="psiId">
