--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,16 +7,15 @@
   </div>
     <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
   <div class="aboutBlock">
-    <h3>
-      DashBoardSG uses your GPS to give you a personal dashboard.
-    </h3>
+    <h3>DashBoardSG is a personal dashboard</h3>
+    <p>It uses your location to locate the nearest metrology station to pull the data from.</p>
     <h3>New features to be built in the future include:</h3>
     <ul>
+      <li><span class="badge rounded-pill bg-success">Done!</span>  Cookies to allow persistence</li>
+      <li><span class="badge rounded-pill bg-success">Done!</span>  Addition of new dashboard items</li>
+      <li><span class="badge rounded-pill bg-success">Done!</span>  Troubleshoot the hamburger on navbar</li>
       <li>Adding a spinning wheel upon click</li>
-      <li>Cookies to allow persistence</li>
       <li>Contact Us page should write the feedback into the database</li>
-      <li>Addition of new dashboard items (Suggestions are welcome)</li>
-      <li>Troubleshoot the hamburger on navbar</li>
     </ul>
   </div>
 </body>
