--- a/views/display.ejs
+++ b/views/display.ejs
@@ -42,8 +42,7 @@
           <div class="subcaption"><%= selectedDash[key].location %> <%= selectedDash[key].timeValid %></div>
         </div>
       <% }) %>
-      <br>
-      <br>
+      <div><br><br><br></div>
     </div>
   </div>
 
