--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,23 +22,26 @@
 
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-primary">
-      <a class="navbar-brand" href="/">DashBoardSG</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggler">
-        <ul class="navbar-nav ml-auto mt-0 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="/"><i class="bi bi-house"></i>Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about"><i class="bi bi-speedometer2"></i>About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact"><i class="bi bi-person-lines-fill"></i>Contacts</a>
-          </li>
-        </ul>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">DashBoardSG</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto mt-0 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="/"><i class="bi bi-house"></i>Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about"><i class="bi bi-speedometer2"></i>About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact"><i class="bi bi-person-lines-fill"></i>Contacts</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </header>
