--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,7 @@
     <!-- <img class="profile" src="images/cat.jpeg" alt="cat profile"> -->
   <div class="aboutBlock">
     <h3>DashBoardSG is a personal dashboard</h3>
-    <p>It uses your location to locate the nearest metrology station to pull the data from.</p>
+    <p>It locates the nearest metrology station using your GPS, then pulls the required data.</p>
     <h3>New features to be built in the future include:</h3>
     <ul>
       <li><span class="badge rounded-pill bg-success">Done!</span>  Cookies to allow persistence</li>
@@ -18,6 +18,7 @@
       <li>Contact Us page should write the feedback into the database</li>
     </ul>
   </div>
+  <div><br><br><br></div>
 </body>
 
 <%- include("partials/footer.ejs") %>
