--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,5 +12,6 @@
     <br>
     <button class="btn btn-primary btn-lg" type="submit">Submit</button>
   </form>
+  <div><br><br><br></div>
 </body>
 <%- include("partials/footer.ejs") %>
