Added error handling when API goes down

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,6 +14,7 @@
       <li><span class="badge rounded-pill bg-success">Done!</span>  Cookies to allow persistence</li>
       <li><span class="badge rounded-pill bg-success">Done!</span>  Addition of new dashboard items</li>
       <li><span class="badge rounded-pill bg-success">Done!</span>  Troubleshoot the hamburger on navbar</li>
+      <li><span class="badge rounded-pill bg-success">Done!</span>  Error handling when API goes down</li>
       <li>Adding a spinning wheel upon click</li>
       <li>Contact Us page should write the feedback into the database</li>
     </ul>
